# Create Team Page: in process

--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -8,7 +8,7 @@ header.nl-header-log
                     nav.navbar.navbar-toggleable-md.navbar-light.bg-faded
                         button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
                             span.navbar-toggler-icon
-                        div.row
+                        div.row.m-0
                             div.col-lg-7.nl-header-top--left
                                 div.row.nl-h100
                                     div.col-lg-2
