--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -19,23 +19,20 @@ section.nl-section.nl-my-teams
                         li
                             span.not-playing.indicator
                             span Not Playing
-            div.col-md-4
-                div.btn.btn-primary.pull-right Create helmet
+            div.col-md-4.nl-tar
+                div.btn.btn-primary.nl-m-b-225 Create helmet
 
         div.row.nl-m-b-25
-            div.col-6.col-lg-3
+            div.col-12.col-md-6.col-lg-3
                 .nl-card-wrapper
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                div.row.align-items-center
-                                    div.col-8.nl-m-r-64
-                                        p
-                                            | Team:
-                                            span.title team NLC2
+                                p
+                                    | Team:
+                                    span.title team NLC2
+                                <img src="assets/img/helmet.png" alt="helmet">
 
-                                    div.col-4
-                                        <img src="assets/img/helmet.png" alt="helmet">
                     .row
                         .col-12
                             table.table.table-striped
@@ -125,19 +122,16 @@ section.nl-section.nl-my-teams
                                                 | FP TOTAL:
                                                 span.result 199.7
 
-            div.col-6.col-lg-3
+            div.col-12.col-md-6.col-lg-3
                 .nl-card-wrapper
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                div.row.align-items-center
-                                    div.col-8.nl-m-r-64
-                                        p
-                                            | Team:
-                                            span.title team NLC2
+                                p
+                                    | Team:
+                                    span.title team NLC2
+                                <img src="assets/img/helmet.png" alt="helmet">
 
-                                    div.col-4
-                                        <img src="assets/img/helmet.png" alt="helmet">
                     .row
                         .col-12
                             table.table.table-striped
@@ -226,19 +220,16 @@ section.nl-section.nl-my-teams
                                             p
                                                 | FP TOTAL:
                                                 span.result 199.7
-            div.col-6.col-lg-3
+            div.col-12.col-md-6.col-lg-3
                 .nl-card-wrapper
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                div.row.align-items-center
-                                    div.col-8.nl-m-r-64
-                                        p
-                                            | Team:
-                                            span.title team NLC2
+                                p
+                                    | Team:
+                                    span.title team NLC2
+                                <img src="assets/img/helmet.png" alt="helmet">
 
-                                    div.col-4
-                                        <img src="assets/img/helmet.png" alt="helmet">
                     .row
                         .col-12
                             table.table.table-striped
@@ -327,19 +318,16 @@ section.nl-section.nl-my-teams
                                             p
                                                 | FP TOTAL:
                                                 span.result 199.7
-            div.col-6.col-lg-3
+            div.col-12.col-md-6.col-lg-3
                 .nl-card-wrapper
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                div.row.align-items-center
-                                    div.col-8.nl-m-r-64
-                                        p
-                                            | Team:
-                                            span.title team NLC2
+                                p
+                                    | Team:
+                                    span.title team NLC2
+                                <img src="assets/img/helmet.png" alt="helmet">
 
-                                    div.col-4
-                                        <img src="assets/img/helmet.png" alt="helmet">
                     .row
                         .col-12
                             table.table.table-striped
