--- a/markup/_scss/layouts/_header-log.scss
+++ b/markup/_scss/layouts/_header-log.scss
@@ -19,7 +19,7 @@
         //display: none;
       }
       @include respond-to(handhelds){
-        //display: block;
+        flex-direction: column;
       }
 
     }
@@ -46,6 +46,7 @@
       }
     }
   }
+
 
   .nl-title {
     text-transform: uppercase;
