# My Team Page: responsive footer table

--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -23,7 +23,7 @@ section.nl-section.nl-my-teams
                 div.btn.btn-primary.nl-m-b-225 Create helmet
 
         div.row.nl-m-b-25
-            div.col-12.col-md-6.col-lg-3
+            div.col-12.col-md-6.col-lg-6.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -107,22 +107,20 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card-footer
-                                div.row.align-items-center
-                                    div.col-5
-                                        .nl-team-card-btns
-                                            button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                            button.btn.btn-primary.btn-sm.btn-warning Delete
+                                div.nl-team-card-footer--left
+                                    .nl-team-card-btns
+                                        button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
+                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                div.nl-team-card-footer--right
+                                    .nl-team-card-result
+                                        p
+                                            | TOTAL:
+                                            span.result $69000
+                                        p
+                                            | FP TOTAL:
+                                            span.result 199.7
 
-                                    div.col-7
-                                        .nl-team-card-result
-                                            p
-                                                | TOTAL:
-                                                span.result $69000
-                                            p
-                                                | FP TOTAL:
-                                                span.result 199.7
-
-            div.col-12.col-md-6.col-lg-3
+            div.col-12.col-md-6.col-lg-6.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -206,21 +204,19 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card-footer
-                                div.row.align-items-center
-                                    div.col-5
-                                        .nl-team-card-btns
-                                            button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                            button.btn.btn-primary.btn-sm.btn-warning Delete
-
-                                    div.col-7
-                                        .nl-team-card-result
-                                            p
-                                                | TOTAL:
-                                                span.result $69000
-                                            p
-                                                | FP TOTAL:
-                                                span.result 199.7
-            div.col-12.col-md-6.col-lg-3
+                                div.nl-team-card-footer--left
+                                    .nl-team-card-btns
+                                        button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
+                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                div.nl-team-card-footer--right
+                                    .nl-team-card-result
+                                        p
+                                            | TOTAL:
+                                            span.result $69000
+                                        p
+                                            | FP TOTAL:
+                                            span.result 199.7
+            div.col-12.col-md-6.col-lg-6.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -304,21 +300,19 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card-footer
-                                div.row.align-items-center
-                                    div.col-5
-                                        .nl-team-card-btns
-                                            button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                            button.btn.btn-primary.btn-sm.btn-warning Delete
-
-                                    div.col-7
-                                        .nl-team-card-result
-                                            p
-                                                | TOTAL:
-                                                span.result $69000
-                                            p
-                                                | FP TOTAL:
-                                                span.result 199.7
-            div.col-12.col-md-6.col-lg-3
+                                div.nl-team-card-footer--left
+                                    .nl-team-card-btns
+                                        button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
+                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                div.nl-team-card-footer--right
+                                    .nl-team-card-result
+                                        p
+                                            | TOTAL:
+                                            span.result $69000
+                                        p
+                                            | FP TOTAL:
+                                            span.result 199.7
+            div.col-12.col-md-6.col-lg-6.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -402,17 +396,17 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card-footer
-                                div.row.align-items-center
-                                    div.col-5
-                                        .nl-team-card-btns
-                                            button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                            button.btn.btn-primary.btn-sm.btn-warning Delete
+                                div.nl-team-card-footer--left
+                                    .nl-team-card-btns
+                                        button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
+                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                div.nl-team-card-footer--right
+                                    .nl-team-card-result
+                                        p
+                                            | TOTAL:
+                                            span.result $69000
+                                        p
+                                            | FP TOTAL:
+                                            span.result 199.7
 
-                                    div.col-7
-                                        .nl-team-card-result
-                                            p
-                                                | TOTAL:
-                                                span.result $69000
-                                            p
-                                                | FP TOTAL:
-                                                span.result 199.7
+
