--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -52,10 +52,10 @@ header.nl-header-log
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Sport <img src="assets/img/ball.png" alt="#">
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink")
-                                        a.dropdown-item(href="#") Soccer
-                                        a.dropdown-item(href="#") Football
-                                        a.dropdown-item(href="#") Baseball
-                                        a.dropdown-item(href="#") Tennis
+                                        a.dropdown-item(href="#") <span>Soccer</span> <img src="assets/img/ball.png" alt="#">
+                                        a.dropdown-item(href="#") <span>Football</span> <img src="assets/img/ball.png" alt="#">
+                                        a.dropdown-item(href="#") <span>Baseball</span> <img src="assets/img/ball.png" alt="#">
+                                        a.dropdown-item(href="#") <span>Tennis</span> <img src="assets/img/ball.png" alt="#">
 
                                 li.nav-item
                                     a.nav-link(href="#") HOME
