--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -13,36 +13,36 @@
     @include respond-to(allwide) {
       //float: left;
       width: 10% !important;
-      //&:nth-child(1) {
-      //  width: 17%;
-      //}
-      //&:nth-child(2) {
-      //  width: 7%;
-      //}
-      //&:nth-child(3) {
-      //  width: 7%;
-      //}
-      //&:nth-child(4) {
-      //  width: 12%;
-      //}
-      //&:nth-child(5) {
-      //  width: 7%;
-      //}
-      //&:nth-child(6) {
-      //  width: 6%;
-      //}
-      //&:nth-child(7) {
-      //  width: 8%;
-      //}
-      //&:nth-child(8) {
-      //  width: 5%;
-      //}
-      //&:nth-child(9) {
-      //  width: 9%;
-      //}
-      //&:nth-child(10) {
-      //  width: 10%;
-      //}
+      &:nth-child(1) {
+        width: 17%;
+      }
+      &:nth-child(2) {
+        width: 7%;
+      }
+      &:nth-child(3) {
+        width: 7%;
+      }
+      &:nth-child(4) {
+        width: 12%;
+      }
+      &:nth-child(5) {
+        width: 7%;
+      }
+      &:nth-child(6) {
+        width: 6%;
+      }
+      &:nth-child(7) {
+        width: 8%;
+      }
+      &:nth-child(8) {
+        width: 5%;
+      }
+      &:nth-child(9) {
+        width: 9%;
+      }
+      &:nth-child(10) {
+        width: 10%;
+      }
     }
   }
 }
