fix table width bug

--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -168,6 +168,8 @@
     }
   }
   .table{
+    max-width: none;
+    width: calc(100% + 1px);
     .indicated{
       padding: calculateRem(10px) 0;
     }
