--- a/markup/_layouts/create_team.jade
+++ b/markup/_layouts/create_team.jade
@@ -15,7 +15,7 @@ html(lang="en")
 
 
 
-        include _partials/preloader.jade
+        //include _partials/preloader.jade
         include _partials/header-log.jade
         main
             include _content/create-team-content
@@ -23,3 +23,4 @@ html(lang="en")
 
         include _partials/footer-log.jade
         include _partials/scripts.jade
+
