--- a/markup/_layouts/index.jade
+++ b/markup/_layouts/index.jade
@@ -12,7 +12,7 @@ html(lang="en")
         include _partials/styles.jade
 
     body
-        include _partials/preloader.jade
+        //include _partials/preloader.jade
         include _partials/header.jade
         main
             include _content/_index/nl-section-start-winning
