--- a/markup/_layouts/players.jade
+++ b/markup/_layouts/players.jade
@@ -16,7 +16,7 @@ html(lang="en")
 
 
 
-        include _partials/preloader.jade
+        //include _partials/preloader.jade
         include _partials/header-log.jade
         main
             include _content/players-content
