--- a/markup/_layouts/my_teams.jade
+++ b/markup/_layouts/my_teams.jade
@@ -14,7 +14,7 @@ html(lang="en")
     body
 
 
-        include _partials/preloader.jade
+        //include _partials/preloader.jade
         include _partials/header-log.jade
         main
             include _content/my-teams-content
